# databricks-platform-guardrails-aws

./: .gitignore  Makefile  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
auditor/: README.md  pyproject.toml
auditor/databricks_auditor/: __init__.py  cli.py  client.py  config.py  report.py
auditor/databricks_auditor/checks/: __init__.py  cluster_policies.py  clusters.py  secrets.py  tags_cost_controls.py  workspace_settings.py
auditor/databricks_auditor/fixtures/: sample_clusters.json  sample_policies.json  sample_secrets.json  sample_workspace_conf.json
auditor/tests/: test_checks.py  test_cli.py  test_report.py  test_workload_quality.py
examples/: README.md  audit_report.html  audit_report.json  audit_report.md  terraform_plan_snippet.txt
sql/: cost_allocation.sql  job_failures.sql  usage_top_users.sql
terraform/envs/dev/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/aws_baseline/: main.tf  outputs.tf  variables.tf
terraform/modules/databricks_guardrails/: main.tf  outputs.tf  policy.json.tpl  variables.tf
terraform/modules/databricks_jobs/: main.tf  outputs.tf  variables.tf
workload/: README.md  __init__.py  job_runner.py  pipeline.py  quality.py
workload/notebooks/: 01_ingest_bronze.py  02_transform_silver.py  03_aggregate_gold.py
workload/sql/: analytics_queries.sql
